--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,7 @@ ul {
   font-size: 14px;
   line-height: 1.143;
   letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 .advantage-paragraph {
   font-weight: 400;
