--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,6 @@ ul {
   list-style: none;
   color: inherit;
 }
-
 .logo-head {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -69,7 +68,6 @@ ul {
   color: var(--white-color);
   text-align: center;
   text-transform: uppercase;
-  
 }
 .order-service-button {
   font-family: inherit;
@@ -82,7 +80,6 @@ ul {
   background-color: var(--blue-color);
   border: 0px;
   border-radius: 4px;
-  
 }
 .advantage-header {
   font-weight: 700;
@@ -107,10 +104,8 @@ ul {
 }
 .staff-card {
   background: var(--white-color);
-  box-shadow: 
-  0px 1px 3px rgba(0, 0, 0, 0.12),
-  0px 1px 1px rgba(0, 0, 0, 0.14),
-  0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 .staff-name {
@@ -165,12 +160,12 @@ ul {
 .button-action:focus,
 .button-action:hover,
 .button:active {
-  color: var(--white-color); 
+  color: var(--white-color);
   background-color: var(--blue-color);
 }
-.project-view{ 
-  background: #FFFFFF;
-  border: 1px solid #EEEEEE;
+.project-view {
+  background: #ffffff;
+  border: 1px solid #eeeeee;
   box-sizing: border-box;
 }
 .project-name {
@@ -184,5 +179,5 @@ ul {
   font-size: 16px;
   line-height: 30px;
   letter-spacing: 0.03em;
-  color: var(--secondary-black-color)
+  color: var(--secondary-black-color);
 }
